<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_export_csv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
        android:background="@drawable/button_outline"
        android:text="@string/button_export_csv"
        />

    <Button
        android:id="@+id/button_export_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
        android:background="@drawable/button_outline"
        android:text="@string/button_export_pdf"
        />

    <Button
        android:id="@+id/button_export_html"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:paddingLeft="55dp"
        android:paddingRight="55dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
        android:background="@drawable/button_outline"
        android:text="@string/button_export_html"
        />
</LinearLayout>