<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:paddingTop="5dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:gravity="start">

            <Button
                android:id="@+id/backButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/button_back"
                android:padding="7dp"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:gravity="end">

            <Button
                android:id="@+id/editRacerButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/button_edit"
                android:padding="7dp"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/deleteRacerButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/button_delete"
                android:layout_marginLeft="10dp"
                android:padding="7dp"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:gravity="start"
            android:text="@string/display_name"
            android:textAlignment="textStart"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/display_racer_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="4"
            android:gravity="start"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:gravity="start"
            android:text="@string/display_gender"
            android:textAlignment="textStart"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/display_racer_gender"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="4"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/display_racer_born_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:gravity="start"
            android:text="@string/display_born_he"
            android:textAlignment="textStart"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/display_racer_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="4"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:gravity="start"
            android:text="@string/display_category"
            android:textAlignment="textStart"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/display_racer_category"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="4"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:gravity="start"
            android:text="@string/display_team"
            android:textAlignment="textStart"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/display_racer_team"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="4"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:gravity="start"
            android:text="@string/display_number"
            android:textAlignment="textStart"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/display_racer_number"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="4"
            android:gravity="start"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:gravity="start"
            android:text="@string/display_time"
            android:textAlignment="textStart"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/display_racer_time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="4"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:id="@+id/display_time_trial">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:gravity="start"
            android:text="@string/display_start_time"
            android:textAlignment="textStart"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/display_racer_time_trial"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="4"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18dp"/>
    </LinearLayout>

</LinearLayout>

