<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light">


    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:textAllCaps="false"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">
        <Button
            android:id="@+id/button_add_racer"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:padding="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="12dp"
            android:background="@drawable/button_outline"
            android:text="@string/button_add_racer"
            />

        <Button
            android:id="@+id/button_import_starting_list"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:padding="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="12dp"
            android:background="@drawable/button_outline"
            android:text="@string/button_import_starting_list"
            />

        </LinearLayout>

        <Spinner
            android:id="@+id/filter_starting_list"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="5"
            android:layout_marginRight="5dp"
            android:background="@drawable/spinner_background"
            android:spinnerMode="dropdown" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_racers_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <ListView
        android:id="@+id/all_racers_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" >

    </ListView>

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:text="@string/info_starting_list_here"
        android:textAlignment="center"
        android:textStyle="bold|italic"
         />

</LinearLayout>